style.css
html {
    position: relative;
    min-height: 100%;
}

.sacramento-regular {
    font-family: "Sacramento", cursive;
    font-weight: 400;
    font-style: normal;
}  

body {
    font-family: 'Raleway', sans-serif;
    margin: 0;
    padding: 0;
    line-height: 1.6;
    color: #333;
    background-color: #f4f4f4;
    padding-bottom: 100px;
}

.navigation {
    background-color: #444;
    box-sizing: border-box;
    border-bottom: 1px solid #dddddd;
    left: 0;
    overflow-y: auto;
    padding: 10px 0;
    position: fixed;
    text-align: center;
    top: 0;
    width: 100%;
    z-index: 999;
}

.navigation ul {
    padding: 0;
    margin: 0;
    list-style: none;
}

.navigation a {
    color: white;
    display: inline-block;
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    font-weight: 300;
    letter-spacing: 2px;
    padding: 10px 40px;
    text-transform: uppercase;
    text-decoration: none;
}

.nav-link:hover {
    cursor: pointer;
    color: #2176FF;
    text-decoration: none;
}
  
.nav-link:active {
    color: orange;
    text-decoration: none;
}

.banner {
    background-image: url("solar_pannels_sky.jpeg");
    opacity: 0.7;
    background-position: center;
    background-size: cover;
    height: 400px;
    position: relative;
    text-align: center;
    margin-top: 60px;
    width: 100%;
}

.banner-text {
    position: relative;
    padding: 80px;
    opacity: 1;
}

h1 {
    color: #000;
    font-family: "Sacramento";
    font-size: 60px;
    margin: 20px;
    opacity: 1;
}

.container {
    margin-top: 60px;
    width: 80%;
    margin: 30px auto;
    padding: 50px;
    background: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 30px;
    border: 50px;
}

h2 {
    color: #333;
    border-bottom: 2px solid #333;
    padding-bottom: 0.5em;
    font-family: 'Amatic SC', sans-serif;
    font-size: 30px;
    margin: 0;
    text-align: left;
    text-transform: uppercase;
}

p {
    color: #000000;
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    line-height: 1.6;
    text-align: left;
}

.team-member {
    margin-bottom: 20px;
}

.team-member h3 {
    margin: 0;
    color: #444;
    font-family: 'Raleway', sans-serif;
    text-transform: uppercase;
}

p {
    margin: 0.5em 0 0;
    color: #666;
}

ul {
    list-style-type: disc;
    margin-left: 20px;
}

.report a {
    color: #0066cc;
    text-decoration: none;
}

.report a:hover {
    color: orange;
}

.footer {
    background-color: #333;
    color: #f4f4f4;
    text-align: center;
    padding: 1em 0;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.footer p{
    color: #f4f4f4;
    text-align: center;
}

